<?xml version="1.0"?>
<package format="2">
  <name>radl_lib</name>
  <version>0.0.1</version>
  <description> RADL library </description>
  <maintainer email="leonard.gerard@sri.com">Léonard Gérard</maintainer>
  <license>GPL</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
